# Eagle

./: .gitmodules  CMakeLists.txt
cmake/: FindHTSlib.cmake
eagle-docker/: build-all.sh
eagle-docker/eagle/: Dockerfile  build-eagle.sh  build.sh
eagle-docker/eagle-build-base/: Dockerfile  build.sh
eagle-docker/htslib/: Dockerfile  build.sh
src/: CMakeLists.txt
