PROJECT(Eagle CXX)

#OPTION(BUILD_SHARED_LIBS OFF)
set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/cmake ${CMAKE_MODULE_PATH})

SET(Boost_USE_STATIC_LIBS ON)
SET(Boost_USE_STATIC_RUNTIME ON)
FIND_PACKAGE(Boost REQUIRED program_options random iostreams zlib)

FIND_PACKAGE(HTSlib REQUIRED)

FIND_PACKAGE(OpenMP REQUIRED)

SET(BLA_STATIC ON)
FIND_PACKAGE(BLAS REQUIRED)

ADD_SUBDIRECTORY(src)
