PROJECT(Eagle CXX)

# CPack
set(CPACK_GENERATOR "TXZ")
set(CPACK_ARCHIVE_THREADS 0)
include(CPack)

# Some general configuration
OPTION(BUILD_SHARED_LIBS OFF)
set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/cmake ${CMAKE_MODULE_PATH})

# Boost
SET(Boost_USE_STATIC_LIBS ON)
SET(Boost_USE_STATIC_RUNTIME ON)
FIND_PACKAGE(Boost REQUIRED program_options random iostreams zlib)

# HTSlib
FIND_PACKAGE(HTSlib REQUIRED)

# OpenMP
FIND_PACKAGE(OpenMP REQUIRED)

# BLAS
SET(BLA_STATIC ON)
FIND_PACKAGE(BLAS REQUIRED)

ADD_SUBDIRECTORY(src)
